--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <meta name="description" content="Transforme sua rotina de cuidados em momentos de bem-estar. Tratamentos estéticos personalizados em ambiente acolhedor e sofisticado." />
     <meta name="author" content="Bella Estética" />
     <meta name="keywords" content="estética, spa, beleza, tratamentos faciais, massagem, bem-estar, São Paulo" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
 
     <meta property="og:title" content="Bella Estética - Desperte sua Beleza Natural" />
     <meta property="og:description" content="Transforme sua rotina de cuidados em momentos de bem-estar. Tratamentos estéticos personalizados em ambiente acolhedor e sofisticado." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/favicon.ico" />
   </head>
 
   <body>
